Fix header wrapping and apply bg gradient to only landing

--- a/style/common.scss
+++ b/style/common.scss
@@ -22,7 +22,6 @@ body {
 
   background-color: #FFFFFF;
   font-size: 0.9rem;
-  background: linear-gradient(341deg, rgba(123,142,6,0.35) 23%, rgba(123,142,6,0) 70%);
 }
 
 .text-yellow {
